--- a/verCarrera.html
+++ b/verCarrera.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--font awesome-->
@@ -20,9 +21,14 @@
 <body>
 
     <div class="bg-panel-superior">
-        <div class="container d-flex">
-            <div class="w-25">
-                <label class="click iconos-superior">
+        <div class="container-fluid d-flex">
+            <div class="w-50">
+                <a href="https://www.itesca.edu.mx/" target="_blank" class="link">
+                    <label class="marca-awa">
+                        <img src="img/favicon.png" style="width:30px;">ITESCA
+                    </label>
+                </a>
+                <label class="click iconos-superior" id="inicio">
                     <span>
                         <i class="fas fa-home"></i>
                     </span>
@@ -36,7 +42,7 @@
                 </label>
             </div>
             <div class="d-flex justify-content-end w-75">
-                <label class="click iconos-superior ml-3">
+                <label class="click iconos-superior ml-3" id="Cerrar">
                     <span>
                         <i class="fas fa-sign-out-alt"></i>
                     </span>
@@ -64,40 +70,26 @@
         </div>
     </div>
 
-    <div class="container">
-        <img id="img-portada" src="img/portada.png" class="portada img-fluid">
-        <div class="arriba ml-3 form-inline">
-            <img src="img/IconLog.png" class="img-fluid foto-opcional">
-            <div class="d-flex flex-column">
-                <label class="text-dark h3 font-weight-bold">Ingeniería en sistemas computacioales</label>
-                <label class="h5">M.C Cesar Leonel Zazueta Villavicencio</label>
+    <div class="container mb-3">
+        <div class="d-flex justify-content-center align-items-center">
+            <div class="form-inline mb-2">
+                <label class="form-label text-input mr-3">Busqueda por clave/nombre</label>
+                <input id="CarreraSel" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaCarreras">
+                <datalist id="listaCarreras">
+                </datalist>
             </div>
         </div>
     </div>
 
-    <div class="container">
-        <div class="form-inline justify-content-center">
-            <label class="text-input font-weight-bold ancho justify-content-end">Mostrar</label>
-            <select class="form-control ml-2 text-input bg-input" id="mostrar">
-                <option value="">1</option>
-                <option value="">2</option>
-                <option value="" selected>3</option>
-                <option value="">4</option>
-                <option value="">5</option>
-                <option value="">6</option>
-            </select>
-        </div>
-        <div class="form-inline mt-2 justify-content-center">
-            <label class="text-input font-weight-bold ancho justify-content-end">Buscar por nombre</label>
-            <input type="text" name="" id="" class="form-control bg-input text-input ml-2">
-        </div>
-        <div class="form-inline mt-2 justify-content-center">
-            <label class="text-input font-weight-bold ancho justify-content-end">Buscar por nómina</label>
-            <input type="text" name="" id="" class="form-control bg-input text-input ml-2">
-        </div>
-        <div class="d-flex justify-content-center mt-2">
-            <input type="button" value="Aplicar" class="btn bg-input text-input font-weight-bold rounded rounded-pill">
-        </div>
+    <div id="alerta" class="container"></div>
+
+    <div class="container" id="DatosC">
+    </div>
+
+    <div class="container" id="mostrarSel">
+    </div>
+
+    <div class="container" id="Buscador">
     </div>
 
     <div class="container mt-5">
@@ -106,16 +98,20 @@
         <div id="pie"></div>
     </div>
 
-    <!--Ajax-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <div id="modales"></div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=" anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- CKEditor -->
+    <script src="//cdn.ckeditor.com/4.17.1/standard/ckeditor.js"></script>
     <!-- My Script -->
-    <script src="js/verCarrera.js"></script>
+    <script src="js/validaciones.js"></script>
     <script src="js/editarme.js"></script>
+    <script src="js/verCarrera.js"></script>
 
 </body>
 
