--- a/verAcademia.html
+++ b/verAcademia.html
@@ -20,9 +20,14 @@
 <body>
 
     <div class="bg-panel-superior">
-        <div class="container d-flex">
-            <div class="w-25">
-                <label class="click iconos-superior">
+        <div class="container-fluid d-flex">
+            <div class="w-50">
+                <a href="https://www.itesca.edu.mx/" target="_blank" class="link">
+                    <label class="marca-awa">
+                        <img src="img/favicon.png" style="width:30px;">ITESCA
+                    </label>
+                </a>
+                <label class="click iconos-superior" id="inicio">
                     <span>
                         <i class="fas fa-home"></i>
                     </span>
@@ -36,7 +41,7 @@
                 </label>
             </div>
             <div class="d-flex justify-content-end w-75">
-                <label class="click iconos-superior ml-3">
+                <label class="click iconos-superior ml-3" id="Cerrar">
                     <span>
                         <i class="fas fa-sign-out-alt"></i>
                     </span>
@@ -64,54 +69,28 @@
         </div>
     </div>
 
-    <div class="container">
-        <img id="img-portada" src="img/portada.png" class="portada img-fluid">
+    <div class="container mb-3">
+        <div class="d-flex justify-content-center align-items-center">
+            <div class="form-inline mb-2">
+                <label class="form-label text-input mr-3">Busqueda por clave/nombre</label>
+                <input id="AcaSel" type="search" class="form-control text-input bg-input rounded-pill mx-auto" list="listaAcademias">
+                <datalist id="listaAcademias">
+                </datalist>
+            </div>
+        </div>
     </div>
 
-    <div class="container font-weight-bold h3 text-center mb-3 mt-3">
-        Clave - Nombre De la academia
-    </div>
+    <div id="alerta" class="container"></div>
+
+    <div id="infoAcademia"></div>
 
     <div class="container mb-3 border-bottom border-dark">
-        <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
-            <label class="btn btn-secondary active opciones text-input">
-                <input type="radio" name="options" id="option1" autocomplete="off"> Presidente
-            </label>
-            <label class="btn btn-secondary opciones text-input">
-                <input type="radio" name="options" id="option2" autocomplete="off"> Secretario
-            </label>
-            <label class="btn btn-secondary opciones text-input">
-                <input type="radio" name="options" id="option3" autocomplete="off"> Ver miembro
-            </label>
-        </div>
-        <div class="mt-3 d-flex flex-column justify-content-center align-items-center">
-            <div class="col-4">
-                <div class="d-flex flex-column align-items-center">
-                    <img src="img/IconLog.png" class="img-fluid foto-opcional">
-                    <label class="text-input">Nomina</label>
-                    <label>Nombre</label>
-                    <label>Carrera</label>
-                    <div class="d-flex d-inline justify-content-center mb-3">
-                        <img src="img/ver-detalles.png" class="opciones img-fluid click ml-2" title="ver">
-                    </div>
-                </div>
-            </div>
+        <div class="row" id="PS">
         </div>
     </div>
 
     <div class="container mb-3 text-center">
         <div class="h1">Plan de trabajo</div>
-        <div class="d-flex justify-content-center">
-            <div class="form-inline">
-                <label class="text-input">De</label>
-                <input type="datetime-local" class="form-control text-input bg-input rounded-pill ml-2">
-            </div>
-            <div class="form-inline">
-                <label class="text-input ml-2">A</label>
-                <input type="datetime-local" class="form-control text-input bg-input rounded-pill ml-2">
-            </div>
-        </div>
-        <input type="button" value="Aplicar" class="bg-btn-aplicar mt-2">
     </div>
 
     <div class="container mb-3 border-bottom border-dark">
@@ -125,17 +104,6 @@
 
     <div class="container mb-3 text-center">
         <div class="h1">Actas</div>
-        <div class="d-flex justify-content-center">
-            <div class="form-inline">
-                <label class="text-input">De</label>
-                <input type="datetime-local" class="form-control text-input bg-input rounded-pill ml-2">
-            </div>
-            <div class="form-inline">
-                <label class="text-input ml-2">A</label>
-                <input type="datetime-local" class="form-control text-input bg-input rounded-pill ml-2">
-            </div>
-        </div>
-        <input type="button" value="Aplicar" class="bg-btn-aplicar mt-2">
     </div>
 
     <div class="container mb-3 border-bottom border-dark">
@@ -152,47 +120,7 @@
     </div>
 
     <div class="container  border-bottom border-dark mb-3">
-        <div class="mb-3 row">
-            <div class="col-6">
-                <div name="fecha" class="d-flex click mb-4 justify-content-center">
-                    <label name="dia" class="click">24</label>
-                    <div class="d-flex flex-column ml-2 click border-top border-bottom border-dark">
-                        <label class="p-0 m-0 click">Enero 2022, 5:00pm</label>
-                        <label class="p-0 m-0 click">Academia Base Ejemplo Uno</label>
-                        <label class="p-0 m-0 click text-muted">Reunión semanal para asuntos de interés.</label>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div name="fecha" class="d-flex click mb-4 justify-content-center">
-                    <label name="dia" class="click">24</label>
-                    <div class="d-flex flex-column ml-2 click border-top border-bottom border-dark">
-                        <label class="p-0 m-0 click">Enero 2022, 5:00pm</label>
-                        <label class="p-0 m-0 click">Academia Base Ejemplo Uno</label>
-                        <label class="p-0 m-0 click text-muted">Reunión semanal para asuntos de interés.</label>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div name="fecha" class="d-flex click mb-4 justify-content-center">
-                    <label name="dia" class="click">24</label>
-                    <div class="d-flex flex-column ml-2 click border-top border-bottom border-dark">
-                        <label class="p-0 m-0 click">Enero 2022, 5:00pm</label>
-                        <label class="p-0 m-0 click">Academia Base Ejemplo Uno</label>
-                        <label class="p-0 m-0 click text-muted">Reunión semanal para asuntos de interés.</label>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div name="fecha" class="d-flex click mb-4 justify-content-center">
-                    <label name="dia" class="click">24</label>
-                    <div class="d-flex flex-column ml-2 click border-top border-bottom border-dark">
-                        <label class="p-0 m-0 click">Enero 2022, 5:00pm</label>
-                        <label class="p-0 m-0 click">Academia Base Ejemplo Uno</label>
-                        <label class="p-0 m-0 click text-muted">Reunión semanal para asuntos de interés.</label>
-                    </div>
-                </div>
-            </div>
+        <div class="mb-3 row" id="fechas">
         </div>
     </div>
 
@@ -234,16 +162,20 @@
         </div>
     </div>
 
-    <!--Ajax-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <div id="modales"></div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=" anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- CKEditor -->
+    <script src="//cdn.ckeditor.com/4.17.1/standard/ckeditor.js"></script>
     <!-- My Script -->
-    <script src="js/verAcademia.js"></script>
+    <script src="js/validaciones.js"></script>
     <script src="js/editarme.js"></script>
+    <script src="js/verAcademia.js"></script>
+
 </body>
 
 </html>
